@@ -355,7 +355,7 @@ void ClazyASTAction::PrintHelp(llvm::raw_ostream &ros) const
     ros << "    export CLAZY_CHECKS=\"level0,reserve-candidates,qstring-allocations\"\n";
     ros << "    export CLAZY_CHECKS=\"reserve-candidates\"\n\n";
     ros << "or pass as compiler arguments, for example:\n";
-    ros << "    -Xclang -plugin-arg-clang-lazy -Xclang reserve-candidates,qstring-allocations\n";
+    ros << "    -Xclang -plugin-arg-clazy -Xclang reserve-candidates,qstring-allocations\n";
     ros << "\n";
     ros << "To enable FixIts for a check, also set the env variable CLAZY_FIXIT, for example:\n";
     ros << "    export CLAZY_FIXIT=\"fix-qlatin1string-allocations\"\n\n";
@@ -398,4 +398,4 @@ unique_ptr<ASTConsumer> ClazyStandaloneASTAction::CreateASTConsumer(CompilerInst
 volatile int ClazyPluginAnchorSource = 0;
 
 static FrontendPluginRegistry::Add<ClazyASTAction>
-X("clang-lazy", "clang lazy plugin");
+X("clazy", "clang lazy plugin");
