@@ -1,2 +1,2 @@
 @echo off
-"%~dp0\clang\clang.exe" -Qunused-arguments -Xclang -load -Xclang ClangLazy.dll -Xclang -add-plugin -Xclang clang-lazy %*
+"%~dp0\clang\clang.exe" -Qunused-arguments -Xclang -load -Xclang ClazyPlugin.dll -Xclang -add-plugin -Xclang clazy %*
